# mjpg-streamer

mjpg-streamer-experimental/: CMakeLists.txt
mjpg-streamer-experimental/cmake/: FindGRPC.cmake
mjpg-streamer-experimental/plugins/output_grpc/: .gitignore  CMakeLists.txt  mjpg_streamer.proto  output_grpc.cpp
